# rental_car

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  INTEGRATION.md  Makefile  README.md  alembic.ini  docker-compose.yml  example_crud_api.bash  main.py  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: application.py  db.py  main.py  metrics.py
app/api/: exceptions.py
app/core/: brokers.py  logger_config.py  settings.py
app/dao/: base.py  car_photos.py  car_reports.py  cars.py  deliveries.py  orders.py  payments.py  reviews.py  users.py
app/models/: __init__.py  car_photos.py  car_reports.py  cars.py  deliveries.py  orders.py  payments.py  reviews.py  users.py
docker/: app.sh  example_sql.sql  loki-config.yaml
docker/elastic/: filebeat.yml  kibana_setup.sh
docker/grafana/: 16110_rev4.json  import-dashboard.sh  import-local.sh
docker/prometheus/: prometheus.yml
docker/promtail/: config.yaml
fs_subscriber/: Dockerfile  Makefile  QUICK_START.md  README.md  app.py  brokers.py  docker-compose.yml  entrypoint.sh  env.example  health_check.py  run.sh  shemas.py  users.py
fs_subscriber/app/: main.py  settings.py  users.py
k8s/: build_push.sh  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
memory-bank/: activeContext.md  migrations.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: env.py
migrations/versions/: 15d90e69db64_add_cares_table.py  15d90e69db64_описание_изменений.py  31a91ebf82a8_add_domain_models_cars_car_photos_.py  7b90ed285194_update_users.py  9d2e23ddd836_add_hashed_password_ti_users.py
mobile_app/: build.yaml  package-lock.json  package.json  pubspec.yaml
(+48 files in other folders)
