[project]
name = "rental-car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "alembic>=1.16.4",
   "colorama>=0.4.6",
   "fastapi[all]>=0.116.1",
   "prometheus-fastapi-instrumentator>=7.1.0",
   "pydantic[email]>=2.11.7",
   "pydantic-settings>=2.10.1",
   "sqlalchemy>=2.0.42",
   "uvicorn>=0.35.0",
   "asyncpg>=0.30.0",
   "greenlet>=3.2.4",
   "black>=25.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.black]
line-length = 80

[tool.flake8]
max-line-length = 80
