[project]
name = "rental-car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "alembic>=1.16.4",
   "colorama>=0.4.6",
   "fastapi[all]>=0.116.1",
   "prometheus-fastapi-instrumentator>=7.1.0",
   "pydantic[email]>=2.11.7",
   "pydantic-settings>=2.10.1",
   "sqlalchemy>=2.0.42",
   "uvicorn>=0.35.0",
   "asyncpg>=0.30.0",
   "greenlet>=3.2.4",
   "black>=25.1.0",
   "python-json-logger>=3.3.0",
   "passlib[bcrypt]>=1.7.4",
   "python-jose[cryptography]>=3.3.0",
   "faststream[cli,kafka]>=0.5.48",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 120
fix = true
exclude = ["migrations"]          # исключаем папку migrations

[tool.ruff.lint]
select = [
#   "E",  # ошибки стиля из Flake8 (например, пробелы, отступы, лишние пробелы).
   "F",  # ошибки, связанные с импортами и базовым синтаксисом.
   "I",  # сортировка импортов (тот самый isort-подобный функционал).
]
